puts loader src back in

--- a/examples/nodeweb/views/index.hbs
+++ b/examples/nodeweb/views/index.hbs
@@ -1,7 +1,9 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<script src="/scripts/hilaryWithAMDAndLoader.min.js"></script>
+<script src="/src/hilary.js"></script>
+<script src="/src/hilary.amd.js"></script>
+<!--<script src="/src/hilary.loader.js"></script>-->
 <script src="/scripts/def.js"></script>
 <script src="/scripts/module1.js"></script>
 <script src="/scripts/module2.js"></script>
