--- a/examples/nodeweb/views/index.hbs
+++ b/examples/nodeweb/views/index.hbs
@@ -2,7 +2,7 @@
 <p>Welcome to {{title}}</p>
 
 <script src="/src/hilary.js"></script>
-<script src="/src/hilary.amd.js"></script>
+<!--<script src="/src/hilary.amd.js"></script>-->
 <!--<script src="/src/hilary.loader.js"></script>-->
 <script src="/scripts/def.js"></script>
 <script src="/scripts/module1.js"></script>
