--- a/examples/express/views/index.hbs
+++ b/examples/express/views/index.hbs
@@ -1,10 +1,16 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<div>
+    <a href="/">Home</a> |
+    <a href="/foo">Foo</a>
+</div>
 
-<script src="/src/hilary.js"></script>
-<!--<script src="/src/hilary.amd.js"></script>-->
-<!--<script src="/src/hilary.loader.js"></script>-->
-<script src="/scripts/def.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="/scripts/hilary.js"></script>
+<script src="/scripts/hilary.amd.min.js"></script>
+<script src="/scripts/hilary.jQueryEventEmitter.js"></script>
+<script src="/scripts/definition.js"></script>
+<script src="/scripts/myFactory.js"></script>
 <script src="/scripts/module1.js"></script>
 <script src="/scripts/module2.js"></script>
-<script src="/scripts/app.js"></script>
+<script src="/scripts/startup.js"></script>
