finishes vue-spa example docs

--- a/examples/vue-spa/papyr/styles/main.less
+++ b/examples/vue-spa/papyr/styles/main.less
@@ -22,4 +22,4 @@ a {
 @import "../app/header/header.less";
 @import "../app/products/products.less";
 @import "../app/books/books.less";
-@import "../app/books/books-render.less";
+@import "../app/books/books-3d.less";
